# rusty_moniter

./: README.md
master_node/: Cargo.toml
master_node/src/: main.rs
master_node/src/utils/: get_logs.rs
worker_node/: Cargo.toml  install.sh
worker_node/src/: main.rs
